# claude-monitor

./: .gitignore  CLAUDE.md  JUMP_TO_TERMINAL_BUG.md  LICENSE  README.md  ROADMAP.md  claude_monitor.py  install.sh  jumpback  main.py  monitor-prefs.json  monitor_log.py  pyproject.toml
.github/workflows/: test.yml
hooks/: session_tracker.py
statusline/: install.sh  statusline.sh
tests/: conftest.py  helpers.py  test_formatting.py  test_gerunds.py  test_parsing.py  test_rendering.py  test_tmux_e2e.py  test_tui.py
