[project]
name = "claude-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "textual>=8.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
addopts = "-p asyncio"
asyncio_mode = "auto"
testpaths = ["tests"]
